2006-02-22 Kasper Skaarhoj  <kasperYYYY@typo3.com>

	* Added 3 languages: Faroe, Serbian, Farsi
	* Fixed bug in t3lib_div::cHashParams()
	* Brought back support in EM's index.php::importExtFromRep() function for direct injection of an array with extension files (needed for support for kickstarter, but new function parameters are kept)
	* Added new Indexing Configuration for indexed search: Traversal of page tree. Means that now the page tree can be indexed by the "crawler" extension (cronscript)
	* Added meta indexing configuration type (useful for group-categorizing of search results)
	* Added a condition to indexing of pages; that sys_language_uid and sys_language_content must be similar; it is assumed that for pages with fallback to default content no indexing is wanted.
	* Added "Spotlight" categorizing feature to search results. The categories are defined as indexing configurations + natural categories like pages in the page tree. TypoScript configuration applies.
	
2006-02-21  Stanislas Rolland  <stanislas.rolland@fructifor.ca>

	* Path setting correction in htmlArea RTE SpellChecker plugin.

2006-02-20  Christian Jul Jensen  <christian@jul.net>

	* Fixed bug #2628

2006-02-20  Wolfgang Klinger  <wolfgang@stufenlos.net>

	* Feature request #568: AND (&&) and OR (||) combination of TypoScript conditions

2006-02-18  Robert Lemke  <robert@typo3.org>

	* Changed flexform tag names in t3lib_flexformtools->flex2ArrayXml()

2006-02-17  Karsten Dambekalns  <karsten@typo3.org>

	* Fixed bugs #2368, #2521, #2385, #2186 related to DBAL

2006-02-17  Michael Stucki  <michael@typo3.org>

	* Fixed bug #2597: GDlib TrueType tests fail because of wrong fontFile-path (caused by the symlinks change)
	* Fixed bug #2594: Install Tool says "No gfx/typo3logo.gif file!" (caused by the symlinks change)

2006-02-17  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed obvious bug #2588 in right-click context menu of filelist navframe
